# ashare-mcp

./: .gitignore  README.md  README_zh.md  pyproject.toml
src/ashare_mcp/: __init__.py  announcements.py  codes.py  quotes.py  screen.py  serialize.py  server.py  session.py
src/ashare_mcp/providers/: __init__.py  baostock.py  base.py  factory.py
tests/: test_announcements.py  test_codes.py  test_integration.py  test_quotes.py  test_relogin.py  test_screen.py  test_serialize.py
