[project]
name = "ashare-mcp"
version = "0.1.0"
description = "MCP server exposing the full baostock A-share data API (pluggable data source; baostock backend in v1)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "baostock>=0.8.8",
]

[project.scripts]
ashare-mcp = "ashare_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ashare_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
markers = [
    "network: integration tests that require live baostock connectivity",
]
